--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#"><p2>BLOG</p2></a>
                         </li>
-                        <li><p3>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</p3></li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><p2>SUPPORT</p2></a>
+                          <p2>&nbsp;&nbsp;&nbsp;</p2>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#"><p2>SUPPORT</p2></a>
                         </li>
                     </ul>
                 </div>
@@ -48,15 +50,13 @@
         </div>
             <br>
             <br>
-            <br>
-            <br>
           <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-md-2" id="heading">
                 <br>
                 <br>
                 <br>
               <h1>Find Your Green Thumb</h1>
-              <p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus nibh et molestie lectus scelerisque proin elementum cras. In eu aliquet tincidunt in at ullamcorper eleifend pretium urna. </p1>
+              <p1>We'll help you find care information tailored to your plant's specific needs.</p1>
               <br>
               <br>
               <p><a href="#" class="btn btn-primary btn-large">Learn more »</a></p>
