--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body> 
     <section class="bgimage">
-        <div class="container-fluid">
+        <div class="container-fluid" id="navbackground">
             <br>
             <nav class="navbar navbar-expand-md">
                 <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="#"><p2>BLOG</p2></a>
                         </li>
                         <li class="nav-item">
-                          <p2>&nbsp;&nbsp;&nbsp;</p2>
+                          <p2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p2>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#"><p2>SUPPORT</p2></a>
@@ -55,11 +55,13 @@
                 <br>
                 <br>
                 <br>
+                <br>
               <h1>Find Your Green Thumb</h1>
               <p1>We'll help you find care information tailored to your plant's specific needs.</p1>
               <br>
               <br>
-              <p><a href="#" class="btn btn-primary btn-large">Learn more »</a></p>
+              <br>
+              <p><img src="images/downloadappstore.svg" id="appstore">&nbsp;&nbsp;<img src="images/googleplay.png" id="googleplay"></p>
               <br>
               <br>
             </div>
