--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <body> 
     <section class="bgimage">
         <div class="container-fluid" id="navbackground">
-            <br>
             <nav class="navbar navbar-expand-md">
                 <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
                     <ul class="navbar-nav mr-auto">
@@ -50,18 +49,23 @@
         </div>
             <br>
             <br>
+            <br>
           <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-md-2" id="heading">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="heading">
                 <br>
                 <br>
                 <br>
                 <br>
-              <h1>Find Your Green Thumb</h1>
-              <p1>We'll help you find care information tailored to your plant's specific needs.</p1>
+                <br>
+              <h1>Find Your 
+                <br>Green Thumb</h1>
+              <div class="heroline"></div>
+              <br>
+              <p2>We'll help you find care information tailored to your plant's specific needs.</p2>
               <br>
               <br>
               <br>
-              <p><img src="images/downloadappstore.svg" id="appstore">&nbsp;&nbsp;<img src="images/googleplay.png" id="googleplay"></p>
+              <p><img src="images/downloadappstore.png" id="appstore">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/googleplay.png" id="googleplay"></p>
               <br>
               <br>
             </div>
@@ -69,7 +73,22 @@
           </div>
         </div>
       </section>
-      <section id="body"></section>
+      <section id="body">
+        <br><br><br><br>
+        <div class="howTo"><h2>How it Works</h2></div>
+        <br>
+        <div class="thinline"></div>
+        <div class="blankspace"></div>
+        <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2" id="stepOne">
+          <br><div class="subheadone"><br>
+            <div class="blankspace"></div>
+            <br><p3>1. Search for your plant</p3></div>
+        <br>
+      <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep"><img src='images/stepone.png' width="225px" height="auto" id="searchplant"></div>
+        </div>
+      </section>
 <!-- My Javascript Mobile Navigation !-->
     </body>
     <script
