--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400&family=Raleway&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body> 
     <section class="bgimage">
@@ -61,8 +62,7 @@
                 <br>Green Thumb</h1>
               <div class="heroline"></div>
               <br>
-              <p2>We'll help you find care information tailored to your plant's specific needs.</p2>
-              <br>
+              <div class="herosubhead"><p2>We'll help you find care information tailored to your plant's specific needs.</p2></div>
               <br>
               <br>
               <p><img src="images/downloadappstore.png" id="appstore">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/googleplay.png" id="googleplay"></p>
@@ -73,11 +73,49 @@
           </div>
         </div>
       </section>
+      <section id="elementsofplant">
+        <br><br><br><br><br><br>
+        <div class="howTo"><h2>Take Better Care of Your Houseplant</h2></div>
+        <br>
+        <div class="thinline"></div>
+        <div class="blankspacesmall"></div>
+        <div class="card-deck">
+          <div class="card">
+            <img src="images/sun.png" width="150px" height="150px" class="element">
+            <div class="card-body">
+              <h5 class="card-title">Sunlight</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer">
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/water.png" width="150px" height="150px" class="element">
+            <div class="card-body">
+              <h5 class="card-title">Water</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer">
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/repotting.png" width="150px" height="150px" class="element">
+            <div class="card-body">
+              <h5 class="card-title">Potting</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer">
+            </div>
+          </div>
+        </div>
+        <br>
+      </section>
       <section id="body">
-        <br><br><br><br>
+        <br><br><br><br><br><br>
         <div class="howTo"><h2>How it Works</h2></div>
         <br>
         <div class="thinline"></div>
+        
         <div class="blankspace"></div>
         <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2" id="stepOne">
@@ -86,8 +124,54 @@
             <br><p3>1. Search for your plant</p3></div>
         <br>
       <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep"><img src='images/stepone.png' width="225px" height="auto" id="searchplant"></div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep"><img src='images/stepone.png' width="250px" height="auto" id="searchplant"></div>
         </div>
+        
+        <div class="blankspace"></div>
+        <div class="row flex-column-reverse flex-md-row">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2" id="stepOne">
+          <div class="subheadone">
+            <img src='images/steptwo.png' width="250px" height="auto" id="searchplant"></div>
+       </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+          <br><div class="subheadone"><br>
+          <div class="blankspace"></div>
+          <p3>2. Answer a couple questions</p3>
+          <br>
+          <br>
+          <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div>
+        </div>
+        </div>
+
+        <div class="blankspace"></div>
+        <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2">
+          <br><div class="subheadone">
+            <div class="blankspace"></div>
+            <br><p3>3. Learn how to care for your plant!</p3></div>
+        <br>
+      <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep"><img src='images/stepthree.png' width="250px" height="auto" id="searchplant"></div>
+        </div>
+        <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      </section>
+      <section id="footer">
+        <br>
+        <br>
+        <p2>Follow Us On:</p2>
+        <br>
+        <br>
+        <a href="#" class="fa fa-facebook" id="firsticon"></a>
+<a href="#" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-instagram"></a>
+<br>
+<br>
+<br>
+<br>
       </section>
 <!-- My Javascript Mobile Navigation !-->
     </body>
