--- a/index.html
+++ b/index.html
@@ -120,10 +120,13 @@
         <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2" id="stepOne">
           <br><div class="subheadone"><br>
-            <div class="blankspace"></div>
-            <br><p3>1. Search for your plant</p3></div>
+            <div class="blankspacesmall"></div>
+            <div class="leafThing">
+              <img src="images/leaf.png" style="width:300px; height:auto" id="leaf">
+              <div class="bottom-right">
+            <p3>1. Search for your plant</p3>
         <br>
-      <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div>
+      <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div></div></div></div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep"><img src='images/stepone.png' width="250px" height="auto" id="searchplant"></div>
         </div>
         
@@ -136,21 +139,26 @@
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
           <br><div class="subheadone"><br>
           <div class="blankspace"></div>
+          <div class="leafThing">
+            <img src="images/leaf2.png" style="width:300px; height:auto" id="leafreverse">
+            <div class="bottom-left">
           <p3>2. Answer a couple questions</p3>
           <br>
-          <br>
-          <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div>
+          <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div></div></div>
         </div>
         </div>
 
         <div class="blankspace"></div>
         <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2">
-          <br><div class="subheadone">
-            <div class="blankspace"></div>
-            <br><p3>3. Learn how to care for your plant!</p3></div>
-        <br>
-      <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2" id="stepOne">
+            <br><div class="subheadone"><br>
+              <div class="blankspacesmall"></div>
+              <div class="leafThing">
+                <img src="images/leaf.png" style="width:300px; height:auto" id="leaf">
+                <div class="bottom-right">
+              <p3>3. Learn how to care for your plant!</p3>
+          <br>
+        <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div></div></div></div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep"><img src='images/stepthree.png' width="250px" height="auto" id="searchplant"></div>
         </div>
         <br>
