--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </section>
       <section id="elementsofplant">
         <br><br><br><br><br><br>
-        <div class="howTo"><h2>Take Better Care of Your Houseplant</h2></div>
+        <div class="howTo"><h2>Care for Your Houseplant</h2></div>
         <br>
         <div class="thinline"></div>
         <div class="blankspacesmall"></div>
@@ -115,13 +115,13 @@
         <div class="howTo"><h2>How it Works</h2></div>
         <br>
         <div class="thinline"></div>
-        
+        <br>
         <div class="blankspace"></div>
         <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2" id="stepOne">
           <br><div class="subheadone"><br>
             <div class="leafThing">
-              <img src="images/leaf.png" style="width:400px; height:auto" id="leaf">
+              <img src="images/leaf2.png" style="width:350px; height:auto" id="leaf">
               <div class="bottom-right">
             <p3>1. Search for your plant</p3>
         <br>
@@ -139,7 +139,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
           <br><div class="subheadone"><br>
           <div class="leafThing">
-            <img src="images/leaf2.png" style="width:400px; height:auto" id="leafreverse">
+            <img src="images/leaf.png" style="width:350px; height:auto" id="leafreverse">
             <div class="bottom-left">
           <p3>2. Answer a couple questions</p3>
           <br>
@@ -153,7 +153,7 @@
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2" id="stepOne">
             <br><div class="subheadone"><br>
               <div class="leafThing">
-                <img src="images/leaf.png" style="width:400px; height:auto" id="leaf">
+                <img src="images/leaf2.png" style="width:350px; height:auto" id="leaf">
                 <div class="bottom-right">
               <p3>3. Learn how to care for your plant!</p3>
           <br>
