--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="images/photosynthetica.png" width="260px" height="auto"></a>
+                            <a class="nav-link" href="#"><img src="images/photosynthetica.png" width="250px" height="auto"></a>
                         </li>
                     </ul>
                 </div>
@@ -76,8 +76,6 @@
       <section id="elementsofplant">
         <br><br><br><br><br><br>
         <div class="howTo"><h2>Care for Your Houseplant</h2></div>
-        <br>
-        <div class="thinline"></div>
         <div class="blankspacesmall"></div>
         <div class="card-deck">
           <div class="card">
@@ -114,14 +112,13 @@
         <br><br><br><br><br><br>
         <div class="howTo"><h2>How it Works</h2></div>
         <br>
-        <div class="thinline"></div>
-        <br>
         <div class="blankspace"></div>
         <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2" id="stepOne">
           <br><div class="subheadone"><br>
+            <div class="blankspacesmall"></div>
             <div class="leafThing">
-              <img src="images/leaf2.png" style="width:350px; height:auto" id="leaf">
+              <img src="images/leaf2.png" style="width:300px; height:auto" id="leaf">
               <div class="bottom-right">
             <p3>1. Search for your plant</p3>
         <br>
@@ -134,12 +131,14 @@
         <div class="row flex-column-reverse flex-md-row">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2" id="stepOne">
           <div class="subheadone">
+            <div class="blankspacesmall"></div>
             <img src='images/steptwo.png' width="250px" height="auto" id="searchplant"></div>
        </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
           <br><div class="subheadone"><br>
+            <div class="blankspacesmall"></div>
           <div class="leafThing">
-            <img src="images/leaf.png" style="width:350px; height:auto" id="leafreverse">
+            <img src="images/leaf.png" style="width:300px; height:auto" id="leafreverse">
             <div class="bottom-left">
           <p3>2. Answer a couple questions</p3>
           <br>
@@ -152,8 +151,9 @@
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2" id="stepOne">
             <br><div class="subheadone"><br>
+              <div class="blankspacesmall"></div>
               <div class="leafThing">
-                <img src="images/leaf2.png" style="width:350px; height:auto" id="leaf">
+                <img src="images/leaf2.png" style="width:300px; height:auto" id="leaf">
                 <div class="bottom-right">
               <p3>3. Learn how to care for your plant!</p3>
           <br>
