--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><p2>BLOG</p2></a>
+                            <a class="nav-link" href="https://holdengerber.github.io/Photosyntheticablog/"><p2>BLOG</p2></a>
                         </li>
                         <li class="nav-item">
                           <p2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p2>
@@ -43,7 +43,7 @@
     <a href="javascript:void(0)" class="hamburgerMenu"><div class="hamburger open"></div></a>
         <div class="mobileNav"></a>
           <form action="#" id="mobileNavItems">
-          <a href="#"><h3>BLOG</h3></a>
+          <a href="https://holdengerber.github.io/Photosyntheticablog/"><h3>BLOG</h3></a>
           <a href="#myWork"><h3>SUPPORT</h3></a>
           </form>
         </div>
