--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="images/photosynthetica.png" width="250px" height="auto"></a>
+                          <a class="nav-link" href="https://holdengerber.github.io/Photosynthetica/"><img src="images/photosynthetica.png" width="250px" height="auto"></a>
                         </li>
                     </ul>
                 </div>
@@ -39,7 +39,7 @@
                 </div>
             </nav>
             <!-- My Javascript Mobile Dropdown Navigation !-->
-            <img src="images/photosynthetica.png" width="260px" height="auto" id="logo">
+            <a class="nav-link" href="https://holdengerber.github.io/Photosynthetica/"><img src="images/photosynthetica.png" width="260px" height="auto" id="logo"></a>
     <a href="javascript:void(0)" class="hamburgerMenu"><div class="hamburger open"></div></a>
         <div class="mobileNav"></a>
           <form action="#" id="mobileNavItems">
