--- a/index.html
+++ b/index.html
@@ -124,14 +124,15 @@
         <br>
         <br>
       <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div></div></div></div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep"><img src='images/stepone.png' width="250px" height="auto" id="searchplant"></div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep">
+          <img src='images/stepone.png' width="250px" height="auto" class="searchplant"></div>
         </div>
         <div class="blankspacesmall"></div>
         <div class="blankspacesmall"></div>
         <div class="row flex-column-reverse flex-md-row">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2" id="stepOne">
           <div class="subheadone">
-            <img src='images/steptwo.png' width="250px" height="auto" id="searchplant"></div>
+            <img src='images/steptwo.png' width="250px" height="auto" class="searchplant"></div>
        </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
           <br><div class="subheadone"><br>
@@ -158,7 +159,7 @@
               <p3>3. Learn how to care for your plant!</p3>
           <br>
         <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div></div></div></div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep"><img src='images/stepthree.png' width="250px" height="auto" id="searchplant"></div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep"><img src='images/stepthree.png' width="250px" height="auto" class="searchplant"></div>
         </div>
         <br>
       <br>
