--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <img src="images/sun.png" width="150px" height="150px" class="element">
             <div class="card-body">
               <h5 class="card-title">Sunlight</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">Plants need light and we'll help you make sure your houseplants get enough.</p>
             </div>
             <div class="card-footer">
             </div>
@@ -91,7 +91,7 @@
             <img src="images/water.png" width="150px" height="150px" class="element">
             <div class="card-body">
               <h5 class="card-title">Water</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text">Over/under watering can kill your plants, but Photosynthetica will teach you to hydrate them correctly.</p>
             </div>
             <div class="card-footer">
             </div>
@@ -100,7 +100,7 @@
             <img src="images/repotting.png" width="150px" height="150px" class="element">
             <div class="card-body">
               <h5 class="card-title">Potting</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Get your plant's roots sorted with our guides to potting and soil.</p>
             </div>
             <div class="card-footer">
             </div>
@@ -123,7 +123,7 @@
             <p3>1. Search for your plant</p3>
         <br>
         <br>
-      <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div></div></div></div>
+      <div class="descriptionone"><p1>Find your houseplant in our extensive library by keyword or image search.</p1></div></div></div></div></div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep">
           <img src='images/stepone.png' width="250px" height="auto" class="searchplant"></div>
         </div>
@@ -143,7 +143,7 @@
           <p3>2. Answer a couple questions</p3>
           <br>
           <br>
-          <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div></div></div>
+          <div class="descriptionone"><p1>Let us know about your plants and we'll use that information to help you care for them.</p1></div></div></div></div>
         </div>
         </div>
 
@@ -158,7 +158,7 @@
                 <div class="bottom-right">
               <p3>3. Learn how to care for your plant!</p3>
           <br>
-        <div class="descriptionone"><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat leo viverra ligula turpis urna dolor.</p1></div></div></div></div></div>
+        <div class="descriptionone"><p1>We use the information you provided along with our knowledge of plant care to recommend practices and provide tips to insure success.</p1></div></div></div></div></div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="firststep"><img src='images/stepthree.png' width="250px" height="auto" class="searchplant"></div>
         </div>
         <br>
