--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                           <p2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p2>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#"><p2>SUPPORT</p2></a>
+                          <a class="nav-link" href="https://holdengerber.github.io/Photosyntheticasupport/"><p2>SUPPORT</p2></a>
                         </li>
                     </ul>
                 </div>
@@ -44,7 +44,7 @@
         <div class="mobileNav"></a>
           <form action="#" id="mobileNavItems">
           <a href="https://holdengerber.github.io/Photosyntheticablog/"><h3>BLOG</h3></a>
-          <a href="#myWork"><h3>SUPPORT</h3></a>
+          <a href="https://holdengerber.github.io/Photosyntheticasupport/"><h3>SUPPORT</h3></a>
           </form>
         </div>
         </div>
