--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <br>Green Thumb</h1>
               <div class="heroline"></div>
               <br>
-              <div class="herosubhead"><p2>We'll help you find care information tailored to your plant's specific needs.</p2></div>
+              <div class="herosubhead"><p2>We'll provide you with care information tailored to your plant's specific needs.</p2></div>
               <br>
               <br>
               <p><img src="images/downloadappstore.png" id="appstore">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/googleplay.png" id="googleplay"></p>
