--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
         
           <div class="blankSpaceSmall"></div>
           <div class="blankSpaceSmall"></div>
-          <br>
-          
+
 <!-- How it Works: Step Two - Mockup Image !-->       
         <div class="row flex-column-reverse flex-md-row flex-lg-row flex-sm-row flex-xs-row">
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 offset-lg-2" id="mockupPaddingReverse">
@@ -221,7 +220,7 @@
                   <p3 style="color: #55A603;font-weight: bold">3. Learn how to care for your plant!</p3>
                   <br>
                   <br>
-                  <div class="subheadingResponsive"><p1 style="color:black">We use the information you provided along with our knowledge of plant care to recommend practices and provide tips to insure success.</p1>
+                  <div class="subheadingResponsive"><p1 style="color:black">We use the information you provided to recommend practices and provide tips to ensure success.</p1>
                   </div>
                 </div>
               </div>
