--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <img src="images/sun.png" class="circularCard">
                   <div class="card-body">
                     <h5 class="card-title centeredText">Sunlight</h5>
-                    <p class="card-text centeredText"><p1>Plants need light and we'll help you make sure your houseplants get enough.</p1></p>
+                    <p class="card-text centeredText"><p1>Plants need just the right amount of light, and we'll help you determine how much is right for your houseplant.</p1></p>
                   </div>
                   <div class="card-footer">
                   </div>
