--- a/index.html
+++ b/index.html
@@ -74,11 +74,9 @@
 
               <br>
 
-              <div class="mobileDisappear">
                 <p2 style="color: #022601;">We'll provide you with care information tailored to your plant's specific needs.</p2>
-              </div>
 
-              <div class="blankSpaceSmallResponsive"></div>
+              <div class="blankSpaceSmall"></div>
 
 <!-- App Download Buttons !-->
               <img src="images/downloadappstore.png" id="appStoreIcon">
