--- a/index.html
+++ b/index.html
@@ -241,8 +241,6 @@
       <section id="footer">
         <br>
         <br>
-        <p2>Follow Us On:</p2>
-        <br>
         <br>
         <a href="#" class="fa fa-facebook" id="firsticon"></a>
         <a href="#" class="fa fa-twitter"></a>
@@ -251,6 +249,7 @@
         <br>
         <br>
         <br>
+        <p1>© 2021 Photosynthetica</p1>
       </section>
       
 <!-- My Javascript Mobile Navigation !-->
